syntax = "proto3";

package wallet;

message CreateWalletDto {
  string username = 1;
}

message Wallet {
  string username = 1;
  string publicKey = 2;
  string privateKey = 3;
}

message CreateWalletResponse {
  Wallet wallet = 1;
  string seeds = 2;
}

message WalletResponse {
  Wallet wallet = 1;
}


service WalletService {
  rpc createWallet(CreateWalletDto) returns (CreateWalletResponse) {}
  rpc getWallet(CreateWalletDto) returns (WalletResponse) {}
}